--- a/package.json
+++ b/package.json
@@ -1,18 +1,56 @@
 {
   "name": "lte-upgrade",
-  "version": "1.0.0",
-  "main": "index.js",
+  "version": "2.0.0",
+  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web"
+    "android": "expo run:android",
+    "ios": "expo run:ios",
+    "web": "expo start --web",
+    "eas-build-pre-install": "npm config set legacy-peer-deps true"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/netinfo": "^11.4.1",
+    "@react-native-material/core": "^1.3.7",
+    "@react-navigation/drawer": "^7.5.5",
+    "@react-navigation/material-top-tabs": "^7.3.4",
+    "@react-navigation/native": "^7.1.16",
+    "@react-navigation/native-stack": "^7.3.23",
+    "@react-navigation/stack": "^7.4.4",
+    "axios": "^1.11.0",
     "expo": "~53.0.20",
+    "expo-blur": "^14.1.5",
+    "expo-build-properties": "^0.14.8",
+    "expo-checkbox": "^4.1.4",
+    "expo-constants": "^17.1.7",
+    "expo-device": "^7.1.4",
+    "expo-document-picker": "^13.1.6",
+    "expo-notifications": "^0.31.4",
     "expo-status-bar": "~2.2.3",
-    "react": "19.0.0",
-    "react-native": "0.79.5"
+    "firebase": "^12.0.0",
+    "moment": "^2.30.1",
+    "react": "^19.0.0",
+    "react-native": "^0.79.5",
+    "react-native-blob-util": "^0.22.2",
+    "react-native-element-dropdown": "^2.12.4",
+    "react-native-gesture-handler": "^2.27.2",
+    "react-native-image-slider-box": "^2.0.7",
+    "react-native-pager-view": "^6.8.1",
+    "react-native-paper": "^5.14.5",
+    "react-native-paper-dates": "^0.22.47",
+    "react-native-progress": "^5.0.1",
+    "react-native-raw-bottom-sheet": "^3.0.0",
+    "react-native-reanimated": "^4.0.1",
+    "react-native-root-siblings": "^5.0.1",
+    "react-native-safe-area-context": "^5.5.2",
+    "react-native-screens": "^4.13.1",
+    "react-native-share": "^12.1.1",
+    "react-native-super-grid": "^6.0.1",
+    "react-native-tab-view": "^4.1.2",
+    "react-native-toast-message": "^2.3.3",
+    "react-native-vector-icons": "^10.3.0",
+    "react-native-worklets": "^0.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
