--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "eas-build-pre-install": "npm config set legacy-peer-deps true"
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/netinfo": "^11.4.1",
     "@react-native-material/core": "^1.3.7",
     "@react-navigation/drawer": "^7.5.5",
@@ -34,17 +34,17 @@
     "react-native": "^0.79.5",
     "react-native-blob-util": "^0.22.2",
     "react-native-element-dropdown": "^2.12.4",
-    "react-native-gesture-handler": "^2.27.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-image-slider-box": "^2.0.7",
-    "react-native-pager-view": "^6.8.1",
+    "react-native-pager-view": "6.7.1",
     "react-native-paper": "^5.14.5",
     "react-native-paper-dates": "^0.22.47",
     "react-native-progress": "^5.0.1",
     "react-native-raw-bottom-sheet": "^3.0.0",
-    "react-native-reanimated": "^4.0.1",
+    "react-native-reanimated": "~3.17.4",
     "react-native-root-siblings": "^5.0.1",
-    "react-native-safe-area-context": "^5.5.2",
-    "react-native-screens": "^4.13.1",
+    "react-native-safe-area-context": "5.4.0",
+    "react-native-screens": "~4.11.1",
     "react-native-share": "^12.1.1",
     "react-native-super-grid": "^6.0.1",
     "react-native-tab-view": "^4.1.2",
