--- a/package.json
+++ b/package.json
@@ -49,8 +49,7 @@
     "react-native-super-grid": "^6.0.1",
     "react-native-tab-view": "^4.1.2",
     "react-native-toast-message": "^2.3.3",
-    "react-native-vector-icons": "^10.3.0",
-    "react-native-worklets": "^0.4.1"
+    "react-native-vector-icons": "^10.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
