--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
     "expo-status-bar": "~2.2.3",
     "firebase": "^12.0.0",
     "moment": "^2.30.1",
-    "react": "^19.0.0",
-    "react-native": "^0.79.5",
+    "react": "19.0.0",
+    "react-native": "0.79.5",
     "react-native-blob-util": "^0.22.2",
     "react-native-element-dropdown": "^2.12.4",
     "react-native-gesture-handler": "~2.24.0",
